# libterm

./: CMakeLists.txt  LICENSE  README
examples/: CMakeLists.txt  alternate.c  clear.c  colorful.c  menu.c
include/libterm/: cursor.h  events.h  extern.h  initialization.h  input.h  libterm.h  output.h  result.h  terminal.h
src/events/: events.c  queue.c  queue.h
src/linux/: cursor.c  initialization.c  initialization.h  input.c  output.c  terminal.c
